2011-08-08  Sam Steingold  <sds@gnu.org>

	* configure.in: check for <winternl.h> and <ntstatus.h>
	* win32.d: include them only when detected (yes on cygwin/mingw,
	not on msys/mingw)

2011-08-05  Sam Steingold  <sds@gnu.org>

	fix the 2011-03-31 fix for bug#1731469
	* loop.lisp (*nullvar*): new unbound global
	(destructure): use it instead of (helpvar 0) for null patters
	(expand-loop): bind it; repeat count var does not depend on preceding
	(expand-loop@note-initialization): do not barf on *nullvar* reuse

2011-08-03  Sam Steingold  <sds@gnu.org>

	fix bug#3384698: loop does not warn on REPEAT before FOR
	* loop.lisp (expand-loop): REPEAT is a TERMINATION-TEST
	which is a MAIN-CLAUSE, not a VARIABLE-CLAUSE

2011-08-03  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (check_errno): add ERFKILL & EHWPOISON

2011-08-02  Sam Steingold  <sds@gnu.org>

	fix bug#3384693: no warning when lambda is incompatible with arglist
	* compiler.lisp (inline-callable-function-lambda-p): call c-warn
	when the lambdalist is incompatible with the argument count

2011-08-02  Sam Steingold  <sds@gnu.org>

	* Makefile.devel (src/aclocal.m4): run aclocal in src
	<http://article.gmane.org/gmane.comp.lib.gnulib.bugs:27763>

2011-08-02  Sam Steingold  <sds@gnu.org>

	fix bug#3384825: simple condition printing ignores user-supplied methods
	* condition.lisp (simple-condition): use :REPORT option instead of
	a PRINT-OBJECT :AROUND method

2011-08-01  Sam Steingold  <sds@gnu.org>

	fix recent breakage
	* socket.d (CLOSE) [win32]: define
	* win32.d (ioctl): define to ioctlsocket

2011-08-01  Sam Steingold  <sds@gnu.org>

	fix "clean" targets
	* makemake.in (anymodule): do not remove gllib; there is not such dir
	(clean1): do not remove build-aux, but do remove dynmod
	(clean5): remove modules.h and build-aux unless building in src
	(clean6): do not remove Makefile
	(clean7): depend on distclean-subdirs
	(clean-subdirs, distclean-subdirs): new targets
	(clean): depend on clean-subdirs